# reflexive

./: .gitignore  README.md  pyproject.toml
docs/: game_list.md  index.md  listkg_keygen.md  reflexive_unwrapper.json  reflexive_unwrapper.md  reflexive_unwrapper_sweep.json  reflexive_unwrapper_sweep.md  reflexive_wrapper_inventory.json  reflexive_wrapper_inventory.md  reflexive_wrapper_versions.json  reflexive_wrapper_versions.md  repack_attribution.md
docs/game_lists/: archive.md  (+4 more)
reflexive_cli/: cli.py
scripts/: capture_reflexive_raw2_config.c  compare_unwrapped_corpus_versions.py  download_reflexivearcadegamescollection.sh  extract_all_reflexive_smart_installers.sh  extract_reflexive_smart_installer.py  extract_rutracker_reflexive_installer.py  generate_game_list.py  generate_native_registration_scan.py  generate_reflexive_unwrapper_report.py  generate_reflexive_unwrapper_sweep.py  generate_reflexive_wrapper_inventory.py  generate_reflexive_wrapper_versions.py  generate_rutracker_engine_report.py  generate_rutracker_game_list.py  generate_rutracker_probe_report.py  generate_rutracker_publisher_attribution.py  mpress_memory_dumper.c  patch_reflexive_exe.py  reflexive_listkg.py  reflexive_runtime_unwrapper.c  source_layout.py  unpack_mpress.py  unwrap_installer_tree.py  unwrap_reflexive_wrapper.py
tests/: test_cli.py  test_download.py  test_extract_rutracker_installer.py  test_generate_reflexive_key_inventory.py  test_generate_reflexive_recovered_list.py  test_installer_snapshot.py  test_integrated_wrappers.py  test_reflexive_listkg.py  test_rutracker_game_list.py  (+1 more)
(+61 files in other folders)
