[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reflexive"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "capstone>=5.0.7",
    "pefile>=2024.8.26",
]

[project.scripts]
reflexive = "reflexive.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reflexive"]

[tool.uv]
package = true
