[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reflexive"
version = "0.1.0"
description = "Game preservation toolkit for Reflexive Arcade titles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "capstone>=5.0.7",
    "pefile>=2024.8.26",
]

[project.urls]
Repository = "https://github.com/banteg/reflexive"

[project.scripts]
reflexive = "reflexive.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reflexive"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "sympy>=1.14.0",
]
